TOBAGO-1368: Create a new theme which uses Bootstrap - Fix Mojarra vs. MyFaces different severity ordinal - Fix align for FlowLayout - Layout optimizations (looks better)

--- a/tobago-theme/tobago-theme-standard/src/main/resources/org/apache/myfaces/tobago/renderkit/html/standard/standard/style/tobago.css
+++ b/tobago-theme/tobago-theme-standard/src/main/resources/org/apache/myfaces/tobago/renderkit/html/standard/standard/style/tobago.css
@@ -52,6 +52,7 @@
 
 .tobago-footer {
   background-color: #ffffff;
+  padding: 5px 10px;
 }
 
 /* gridLayout -------------------------------------------------------------- */
@@ -95,7 +96,8 @@ table.tobago-gridLayout > tbody > tr:first-child > td {
 /* page ----------------------------------------------------------- */
 
 body > form > .navbar-fixed-top + * {
-  margin-top: 70px;
+  margin-top: 40px; /* height of the .navbar-fixed-top, todo: use "less" variable */
+  margin-top: 50px; /* XXX */
 }
 
 /* selectManyCheckbox ----------------------------------------------------------- */
